# zed-code-stats

./: .gitignore  Cargo.toml  README.md  extension.toml
src/: lib.rs
